kubernetes/practice/breast_cancer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: breast
spec:
  selector:
    app: breast_cancer
  ports:
  - port: 8000
    targetPort: http
